--- a/client/src/page/header/Header.scss
+++ b/client/src/page/header/Header.scss
@@ -1,7 +1,7 @@
 .header-container {
     border-bottom: 1px solid #eee;
     padding: 15px 0;
-    margin-bottom: 25px;
+    margin-bottom: 24px;
 
     .header-top {
         margin: 0 90px;
@@ -17,6 +17,10 @@
             .header-search {
                 display: flex;
                 align-items: center;
+
+                .header-dropdown-category {
+                    width: 170px;
+                }
             }
 
             .header-item {
@@ -27,7 +31,6 @@
                 min-height: 1px;
                 padding-right: 15px;
                 padding-left: 15px;
-
 
                 .header-icon {
                     display: flex;
@@ -56,7 +59,7 @@
                         }
 
                         .header-icon-text {
-                            font-size: 13px;
+                            font-size: 12px;
                             margin-top: 5px;
                             color: #181818;
                             font-weight: 500;
@@ -77,6 +80,45 @@
             justify-content: center;
             text-align: center;
             gap: 30px;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .header-container {
+        padding: 10px 0;
+        margin-bottom: 20px;
+
+        .header-top {
+            margin: 0 20px;
+            padding: 0 10px;
+
+            .header-row {
+                flex-direction: column;
+                align-items: center;
+                margin-bottom: 16px;
+
+                .header-search {
+                    width: 100%;
+                    margin: 16px 0;
+                }
+
+                .header-item {
+                    flex-direction: column;
+                    gap: 20px;
+                    padding: 0;
+
+                    .header-icon {
+                        justify-content: center;
+                    }
+                }
+            }
+
+            .header-category {
+                flex-direction: row;
+                flex-wrap: wrap;
+                gap: 20px;
+            }
         }
     }
 }
