--- a/client/src/page/content/ourbrands/index.scss
+++ b/client/src/page/content/ourbrands/index.scss
@@ -1,7 +1,5 @@
 .ourbrand-container {
-    padding: 20px;
     margin-top: 24px;
-    border: 1px solid rgba(5, 5, 5, 0.06);
-    border-radius: 8px;
-    background: #f8f8f8;
+    padding-bottom: 24px;
+    border-bottom: 1px solid #dcdcdc;
 }
