--- a/client/src/page/content/carousel/index.scss
+++ b/client/src/page/content/carousel/index.scss
@@ -1,11 +1,12 @@
 .carousel-container {
-    .carousel-text {
+    margin-bottom: 24px;
+
+    .carousel-image {
+        width: 100%;
+        height: 100%;
         margin: 0;
-        // width: 100%;
-        // height: 160px;
         color: #fff;
-        line-height: 160px;
         text-align: center;
-        background: #364d79;
+        border-radius: 8px;
     }
 }
