--- a/client/src/page/component/card/cardproducts/index.scss
+++ b/client/src/page/component/card/cardproducts/index.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+    position: relative;
 
     .cardproduct-image {
         text-align: center;
@@ -10,6 +11,7 @@
     .cardproduct-content {
         display: flex;
         flex-direction: row;
+        justify-content: space-between;
         gap: 16px;
 
         .cardproduct-title {
@@ -29,12 +31,18 @@
             gap: 8px;
 
             .cardproduct-price-text {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
                 color: #181818;
                 font-size: 16px;
                 font-weight: 600;
             }
 
             .cardproduct-price-discount {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
                 color: #fb4d01;
                 text-decoration: line-through;
                 font-size: 13px;
@@ -65,6 +73,32 @@
                 color: #1677ff;
                 fill: #1677ff;
             }
+        }
+    }
+
+    .cardproduct-sale {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 48px;
+        height: 42px;
+        text-align: center;
+        background-color: rgba(255, 216, 57, 0.9);
+        color: #ee4d2d;
+        font-size: 16px;
+        font-weight: 500;
+        opacity: 0.9;
+
+        &::after {
+            content: "";
+            position: absolute;
+            width: 0;
+            height: 0;
+            border-width: 0px 24px 6px;
+            top: 100%;
+            border-color: transparent rgba(255, 216, 57, 0.9) transparent rgba(255, 216, 57, 0.9);
+            border-style: solid;
+            left: 0;
         }
     }
 }
