--- a/client/src/page/footer/Footer.scss
+++ b/client/src/page/footer/Footer.scss
@@ -1,6 +1,7 @@
 .footer-container {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     gap: 24px;
     margin: 48px 90px 0 90px;
     padding-left: 15px;
