--- a/client/src/page/content/carousel/carouselone/index.scss
+++ b/client/src/page/content/carousel/carouselone/index.scss
@@ -1,7 +1,19 @@
 .carouselone-container {
-    .carouselone-container-image {
-        width: 100%;
-        height: 100%;
+    margin-bottom: 24px;
+
+    .carouselone-image {
+        position: relative;
+        overflow: hidden;
         border-radius: 8px;
+
+        .carouselone-image-banner {
+            width: 100%;
+            height: 350px;
+            transition: transform 0.5s ease;
+
+            &:hover {
+                transform: scale(1.1);
+            }
+        }
     }
 }
