--- a/client/src/page/content/followus/index.scss
+++ b/client/src/page/content/followus/index.scss
@@ -20,6 +20,7 @@
         flex-direction: row;
         justify-content: space-between;
         gap: 24px;
+        margin: 0 auto;
 
         .followus-network-icon {
             font-size: 30px;
