--- a/client/src/layout/Layout.scss
+++ b/client/src/layout/Layout.scss
@@ -1,3 +1,58 @@
 .layout-container {
     padding-bottom: 40px;
+    position: relative;
+
+    .layout-contact {
+        position: fixed;
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        margin: 0 24px;
+        top: 64%;
+        right: 0;
+
+        .layout-contact-icon,
+        .layout-contact-phone {
+            width: 50px;
+            height: 50px;
+            color: #1677ff;
+            border-radius: 100%;
+            transition: transform 0.3s, box-shadow 0.3s;
+
+            &:hover {
+                transform: scale(1.1);
+                box-shadow: 0 0 20px rgba(22, 119, 255, 0.7), 0 0 30px rgba(22, 119, 255, 0.5);
+            }
+        }
+
+        .layout-contact-item {
+            position: relative;
+            display: flex;
+            align-items: center;
+
+            &:hover .layout-contact-text {
+                opacity: 1;
+                visibility: visible;
+                transform: translateX(-110%);
+            }
+
+            .layout-contact-text {
+                position: absolute;
+                display: flex;
+                align-items: center;
+                margin-left: 10px;
+                width: 120px;
+                height: 30px;
+                background: linear-gradient(135deg, #6e8efb, #a777e3);
+                color: #fff;
+                padding: 10px 15px;
+                border-radius: 20%;
+                opacity: 0;
+                visibility: hidden;
+                transition: opacity 0.3s, visibility 0.3s, transform 0.3s;
+                transform: translateX(0);
+                white-space: nowrap;
+            }
+        }
+    }
 }
