--- a/client/src/page/component/card/cardproducts/index.scss
+++ b/client/src/page/component/card/cardproducts/index.scss
@@ -6,6 +6,10 @@
 
     .cardproduct-image {
         text-align: center;
+        // border: 1px solid #1677ff;
+        width: 100%;
+        height: 100%;
+        border-radius: 8px;
     }
 
     .cardproduct-content {
