--- a/client/src/page/footer/Footer.scss
+++ b/client/src/page/footer/Footer.scss
@@ -3,9 +3,12 @@
     flex-direction: row;
     justify-content: space-between;
     gap: 24px;
-    margin: 48px 90px 0 90px;
+    margin: 24px 90px 0 90px;
     padding-left: 15px;
     padding-right: 15px;
-    padding-bottom: 24px;
     border-bottom: 1px solid #dcdcdc;
+
+    .footer-form {
+        margin-top: 16px;
+    }
 }
