--- a/client/src/page/component/pagedetails/cardproductfilter/index.scss
+++ b/client/src/page/component/pagedetails/cardproductfilter/index.scss
@@ -195,6 +195,11 @@
     }
 
     .cardproductfilter-quantity {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 8px;
+        text-align: center;
         margin-top: 24px;
         padding: 20px;
         border: 1px solid rgba(5, 5, 5, 0.06);
@@ -203,5 +208,10 @@
         font-size: 16px;
         font-weight: 500;
         letter-spacing: 2;
+
+        &-text {
+            display: flex;
+            align-items: center;
+        }
     }
 }
